[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "greety"  # Replace with your package name
version = "0.2.19"  # Replace with your package version
description = "A brief description of your package"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }  # Change to your license type
readme = "README.md"  # Path to your README file
keywords = ["example", "greety"]  # Keywords for your package

[project.urls]
homepage = "https://github.com/yourusername/greety"  # Your project homepage
repository = "https://github.com/yourusername/greety"  # Your GitHub repository URL
"Bug Tracker" = "https://github.com/yourusername/greety/issues"
"Documentation" = "https://yourpackage.readthedocs.io/"

